--- a/src/Components/ToDoItem/ToDoItem.module.css
+++ b/src/Components/ToDoItem/ToDoItem.module.css
@@ -22,6 +22,11 @@
   opacity: 0.7;
 }
 
+.nameChecked {
+  composes: name;
+  text-decoration: line-through;
+}
+
 .delete {
   display: block;
   width: 10px;
@@ -47,7 +52,8 @@
   opacity: 0.7;
 }
 
-.toDoChecked {
+.tagsAndTimeChecked {
+  composes: tags;
   text-decoration: line-through;
   color: rgba(51, 51, 51, 0.3);
 }
